# openrouteindex

./: .dockerignore  .gitignore  Dockerfile  README.md  osm2pgsql.lua  pyproject.toml
.github/workflows/: docker-image.yml
openrouteindex/: config.py  constants.py  devserver.py  environment.py  generator.py  jinja.py  route_validator.py  updater.py
openrouteindex/db/: __init__.py  core.py  custom.py  queries.py
openrouteindex/templates/: base.html.j2  index.html.j2  multitree.html.j2  relation_links.html.j2  route_debug.html.j2  route_icons.html.j2  tree.html.j2  tree_content.html.j2
openrouteindex/views/: base.py  cycling.py  debug.py  other_routes.py  static.py  walking.py
sql/: graph.sql  wipe.sql
static/: debugmap.js  global.css  tablesort.js
