[project]
name = "openrouteindex"
version = "0.1.0"
description = "Index of routes for Dutch OSM mappers to use as an overview."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geoalchemy2>=0.18.4",
    "jinja2>=3.1.6",
    "osmium>=4.3.1",
    "psycopg>=3.3.3",
    "requests[security]>=2.33.0",
    "sqlalchemy>=2.0.49",
    "tqdm>=4.67.3",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "werkzeug[watchdog]>=3.1.8",
]

[project.scripts]
ori-generator = 'openrouteindex.generator:generate_html'
ori-devserver = 'openrouteindex.devserver:run_server'
ori-updater = 'openrouteindex.updater:main'
ori-validator = 'openrouteindex.route_validator:validate_ways_connections'
